[package]
name = "rust_intro"
version = "0.1.0"
authors = ["Arun Kumar Reddy <arunkumar.kr@flipkart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = "0.10.8"
tokio = { version = "0.2", features = ["full"] }